--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <div class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" class="attribution__mentor">Frontend Mentor</a>. 
-            Coded by <a href="https://github.com/YeenYan/Testimonial-Grid-Section.git" class="attribution__myname">Mark Ian Reyes</a>.
+            Coded by <a href="https://github.com/YeenYan/Testimonial-Grid-Section.git" target="_blank" class="attribution__myname">Mark Ian Reyes</a>.
           </div>
     </main>
 </body>
