--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main class="main">
-        <div class="section">
+        <section class="section">
 
             <div class="col first__col">
                 <div class="container">
@@ -113,7 +113,7 @@
                 </div>
             </div>
 
-        </div>
+        </section>
 
         <div class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" class="attribution__mentor">Frontend Mentor</a>. 
